# qpac

./: LICENSE  README.md  pyproject.toml  setup.py
qpac/: __init__.py  core.py  entropy.py  strategies.py  utils.py
qpac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_roundtrip.py
